# freefile

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  package-lock.json  privacy.md  requirements-cloud.txt  requirements.txt  store-listing.md
.claude/: launch.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.security/: known_values.json.example
backend/: cli.py  main.py
backend/automation/: portal.py
backend/categorizer/: cross_transfer.py  keywords.py  rules.py
backend/db/: database.py  models.py
backend/parsers/: axis.py  base.py  csv_generic.py  detector.py  form26as.py  groww_mf.py  hdfc.py  icici.py  icici_xls.py  indmoney.py  kotak.py  sbi.py  sbi_xlsx.py  zerodha.py
backend/reports/: itr_summary.py
backend/routers/: filing.py  profile.py  tax.py  transactions.py  upload.py
backend/tax/: advance_tax.py  capital_gains.py  deductions.py  engine.py  slabs.py
cloud/: Dockerfile  main.py
docs/launch/: hackernews.md  reddit.md  (+6 more)
frontend/: capacitor.config.ts  package-lock.json  package.json  vitest.config.ts
scripts/: build-desktop.sh  dev.sh  run_cross_transfer.py  security_allowlist.json  security_audit.py  security_patterns.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  test_api_health.py  test_category_overrides.py  test_portal_live.py  test_profile.py  test_settings.py  test_stress.py  test_tax.py  test_transactions.py
(+37 files in other folders)
